# xtile

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  dsl_example.py  nova.md  programming_model.md  pyproject.toml  setup.py  test.mlir  xtile.md
docs/superpowers/plans/: 2026-03-10-xtile-implementation.md  2026-03-11-conv2d-implementation.md  2026-03-11-depthwise-conv2d-implementation.md  2026-03-11-load-store-no-tile-implementation.md  2026-03-12-python-dsl-implementation.md  2026-03-12-reduce-ops-implementation.md  2026-03-12-reshape-transpose-implementation.md  2026-03-14-build-script-implementation.md  2026-03-14-build-script-test-run-implementation.md  2026-03-14-cli-canonicalize-implementation.md  2026-03-14-cli-xt-to-nova-implementation.md  2026-03-14-install-mlir-script-implementation.md  2026-03-14-layernorm-kernel-implementation.md  2026-03-14-matmul-kernel-conversion.md  2026-03-14-matmul-kernel-example-implementation.md  2026-03-14-nova-dialect-implementation.md  2026-03-14-nova-matmul-implementation.md  2026-03-14-nova-optimize-implementation.md  2026-03-14-nova-reduce-implementation.md  2026-03-14-nova-scalar-implementation.md  2026-03-14-python-cli-implementation.md  2026-03-14-python-cli-nova-optimize-implementation.md  2026-03-14-python-dsl-float-scalar-implementation.md  2026-03-14-python-dsl-reduce-ops.md  2026-03-14-python-dsl-unary-ops.md
docs/superpowers/specs/: 2026-03-10-xtile-design.md  2026-03-12-python-dsl-design.md  2026-03-14-build-script-design.md  2026-03-14-build-script-test-run-design.md  2026-03-14-cli-xt-to-nova-design.md  2026-03-14-install-mlir-script-design.md  2026-03-14-nova-dialect-design.md  2026-03-14-nova-matmul-design.md  2026-03-14-nova-optimize-design.md  2026-03-14-nova-reduce-design.md  2026-03-14-nova-scalar-design.md  2026-03-14-python-cli-nova-optimize-design.md  2026-03-14-python-dsl-float-scalar-design.md
include/: CMakeLists.txt
include/nova/: CMakeLists.txt  NovaDialect.h  NovaDialect.td  NovaOps.h  NovaOps.td  NovaPasses.h  NovaPasses.td
include/x1/: CMakeLists.txt  X1Dialect.h  X1Dialect.td  X1Ops.h  X1Ops.td
include/xt/: CMakeLists.txt  XTDialect.h  XTDialect.td  XTOps.h  XTOps.td  XTPasses.h  XTPasses.td
kernels/: add.py  conv2d.py  matmul.py  softmax.py
lib/: CMakeLists.txt
lib/nova/: CMakeLists.txt  NovaAllocate.cpp  NovaBarrier.cpp  NovaDialect.cpp  NovaOps.cpp  NovaOptimize.cpp  NovaSerialize.cpp  NovaThreading.cpp  NovaToX1.cpp
lib/x1/: CMakeLists.txt  X1Dialect.cpp  X1Ops.cpp
lib/xt/: CMakeLists.txt  XTDialect.cpp  XTLiveness.cpp  XTLowerToLoops.cpp  XTOps.cpp  XTSerialize.cpp  XTToNova.cpp
python/: CMakeLists.txt  XTModule.cpp
python/kernels/: __init__.py  layernorm.py  matmul.py  softmax.py
python/tests/: conftest.py  test_python_dsl.py  test_wheel_build.py
python/xtile/: __init__.py  __main__.py  ast_parser.py  dsl.py  errors.py  ir_builder.py  nova.py  types.py
scripts/: build.sh  build_wheel.sh  install_mlir.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/nova/: allocate.mlir  barrier.mlir  invalid.mlir  optimize.mlir  parse.mlir  serialize.mlir  serialize_invalid.mlir  threading.mlir  threading_invalid.mlir  to_x1.mlir
test/python/: allocate.py  barrier.py  compile.py  conv2d_cli.py  dsl_convert.py  matmul_cli.py  optimize.py  serialize.py  threading.py  to_nova.py  to_x1.py
test/x1/: invalid.mlir  invalid_space.mlir  parse.mlir
test/xt/: canonicalize.mlir  invalid.mlir  liveness.mlir  lower.mlir  parse.mlir  serialize.mlir  serialize_invalid.mlir  to_nova.mlir
tools/: llvm-lit-wrapper
xt-opt/: CMakeLists.txt  xt-opt.cpp
xtile/: __init__.py  dsl.py
