[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtile"
version = "0.1.0"
description = "Python DSL for xTile MLIR kernels"
requires-python = ">=3.10"

[project.scripts]
xtile = "xtile.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["xtile", "xtile.*", "mlir", "mlir.*", "kernels", "kernels.*"]
namespaces = true
